infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jw-apps
  name: congregations-api
  labels:
    app: congregations-api
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: congregations-api
  template:
    metadata:
      labels:
        app: congregations-api
    spec:
      containers:
        - name: congregations-api
          image: ghcr.io/ivanskrypka/congregations-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 30
            failureThreshold: 5
            httpGet:
              path: "/api/health"
              port: 3000
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 30
            failureThreshold: 5
            httpGet:
              path: "/api/health"
              port: 3000
          resources:
            requests:
              cpu: 100m
              memory: 80Mi
            limits:
              cpu: 500m
              memory: 150Mi
