infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: congregations-api
  namespace: jw-apps
  labels:
    app: congregations-api
spec:
  selector:
    app: congregations-api
  ports:
    - name: http
      targetPort: 3000
      port: 3000
