infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: congregations-api-ingress
  namespace: jw-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: congregations-api.ukrjw.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: congregations-api
                port:
                  number: 3000
